--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Hi guys ;)</title>
-      
+   <title>Hi guys ;)</title>
+
+<body>
+  insert hello lyrics here
+</body>
+
+</html>
