--- a/hello-from-the-other-siiiiiiiiide-ive-must-of-called-a-thousand-tiiiiiiiiimes/index.html
+++ b/hello-from-the-other-siiiiiiiiide-ive-must-of-called-a-thousand-tiiiiiiiiimes/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <h1>Trololololololol Hello from the other siiiiiide</h1>
-<h1></h1>Trololololololol Hello from the other siiiiiide</h1>
+<h1>Trololololololol Hello from the other siiiiiide</h1>
 </body>
 
 </html>
