--- a/hello-from-the-other-siiiiiiiiide-ive-must-of-called-a-thousand-tiiiiiiiiimes/index.html
+++ b/hello-from-the-other-siiiiiiiiide-ive-must-of-called-a-thousand-tiiiiiiiiimes/index.html
@@ -9,6 +9,11 @@
 <body>
 <h1>Trololololololol Hello from the other siiiiiide</h1>
 <h1>Trololololololol Hello from the other siiiiiide</h1>
+
+<script>console.log("Hello its me..... I was wondering if after all these years blah blah blah HELLO FROM THE OTHER SIIIIIIIIIIIDE.....");</script>
+
+<script>document.write("<h1>...... look in console</h1>");</script>
+<script>document.write("<h1>if you are reading this and arent in the console yet then write your will please</h1></script>
 </body>
 
 </html>
