--- a/hello-from-the-other-siiiiiiiiide-ive-must-of-called-a-thousand-tiiiiiiiiimes/index.html
+++ b/hello-from-the-other-siiiiiiiiide-ive-must-of-called-a-thousand-tiiiiiiiiimes/index.html
@@ -13,7 +13,7 @@
 <script>console.log("Hello its me..... I was wondering if after all these years blah blah blah HELLO FROM THE OTHER SIIIIIIIIIIIDE.....");</script>
 
 <script>document.write("<h1>...... look in console</h1>");</script>
-<script>document.write("<h1>if you are reading this and arent in the console yet then write your will please</h1></script>
+<script>document.write("<h1>if you are reading this and arent in the console yet then write your will please</h1>")</script>
 </body>
 
 </html>
